TAG: pdfdownload-6-0-21-4
TAG: pdfdownload-6-0-21-3
TAG: pdfdownload-6-0-21-2
TAG: pdfdownload-6-0-21-1
DATE: 07/20/2022
STAFF: sc
wts2-941 - add journals to pmc/download_pmc_papers.py, also move/remove, see TR
Also: only send noPDFs log email to Nancy if running on prod
Also: logging pdf file name to pmc.diag.log (as is done for elsevier)

TAG: pdfdownload-6-0-20-13
TAG: pdfdownload-6-0-19-12
DATE: 07/04/2022
STAFF: sc
wts2-197 - 
    elsevier/SciDirectLib.py - set self.: _pmid, _pubType, _volume to "no" when execGetRequest returns 1
    shared/MapCache.py and elsevier/download_elsevier_papers.py added some debug, some commented out
        some not

TAG: pdfdownload-6-0-19-11
DATE: 06/30/2022
STAFF: sc
CHANGES: https://mgi-jira.atlassian.net/browse/WTS2-917 
        pdfdownload throwing yet another python Traceback
        appears some of the papers in the  new journals added
        do not have publication dates. Added testing for None
        in download_elsevier_papers.py

TAG: pdfdownload-6-0-19-10
TAG: pdfdownload-6-0-19-9
TAG: pdfdownload-6-0-19-8
DATE: 06/17/2022
STAFF: sc
CHANGES: https://mgi-jira.atlassian.net/browse/CRM-237 - added 14 new 
    elsevier journals - this tag being release with pdfdownload-6-0-19-7

TAG: pdfdownload-6-0-19-7
TAG: pdfdownload-6-0-19-6
DATE: 06/13/2022
STAFF: sc
CHANGES: WTS2-887 PDF files in the pdfdownload folder not being unzipped
-  

TAG: pdfdownload-6-0-19-5
TAG: pdfdownload-6-0-19-4
TAG: pdfdownload-6-0-19-3
DATE: 05/09/2022
STAFF: sc
CHANGES: WTS2-766 PMC PDF Downloader creating reference objects for Supplemental Data

TAG: pdfdownload-6-0-19-2
DATE: 05/09/2022
STAFF: sc
CHANGES: change baseUrl to https: pmc/identify_missed_papers_plos.py

TAG: pdfdownload-6-0-19-1
DATE: 05/05/2022
STAFF: sc
CHANGES: wts2-865 Elsevier/SciDirect PDF download error (for refs without a title)
 
TAG: pdfdownload-6-0-18-3
DATE: 2/08/2022
STAFF: jak
CHANGES: PMC download now catches and logs http errors
WTS2-812

TAG: pdfdownload-6-0-18-2